<resources>
    <string name="app_name">Quiz</string>
    <string name="quiz_game">Quiz Game</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="score_0">Score: 0</string>
    <string name="_30">30</string>
    <string name="option_1">Option 1</string>
    <string name="question">Question</string>
    <string name="confirm">Confirm</string>
</resources>
